# packages/python-sdk/moru/volume_async/volume_api.py
@@ -243,9 +243,7 @@ class AsyncVolumeApi:
         )
 
         if response.status_code == 404:
-            raise NotFoundException(
-                f"Volume '{volume_id}' or file '{path}' not found"
-            )
+            raise NotFoundException(f"Volume '{volume_id}' or file '{path}' not found")
 
         err = handle_api_exception(response)
         if err:
@@ -283,9 +281,7 @@ class AsyncVolumeApi:
         )
 
         if response.status_code == 404:
-            raise NotFoundException(
-                f"Volume '{volume_id}' or path '{path}' not found"
-            )
+            raise NotFoundException(f"Volume '{volume_id}' or path '{path}' not found")
 
         err = handle_api_exception(response)
         if err:
